--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,13 @@
-astroid==2.2.5
-autopep8==1.4.4
+astroid==2.0.4
+awscli==1.16.163
 bcrypt==3.1.6
+botocore==1.12.153
 certifi==2019.3.9
 cffi==1.12.3
 Click==7.0
 cloudinary==1.16.0
-colorama==0.4.1
+colorama==0.3.9
+docutils==0.14
 dominate==2.3.5
 Flask==1.0.3
 Flask-Bcrypt==0.7.1
@@ -14,26 +16,36 @@ Flask-Login==0.4.1
 Flask-SQLAlchemy==2.4.0
 Flask-WTF==0.14.2
 gunicorn==19.9.0
-isort==4.3.20
+isort==4.3.4
 itsdangerous==1.1.0
 Jinja2==2.10.1
-lazy-object-proxy==1.4.1
+jmespath==0.9.4
+lazy-object-proxy==1.3.1
 MarkupSafe==1.1.1
 mccabe==0.6.1
 mock==3.0.5
 numpy==1.16.3
 pandas==0.24.2
-pycodestyle==2.5.0
+pbr==5.2.0
+pipenv==2018.11.26
+pyasn1==0.4.5
 pycparser==2.19
-pylint==2.3.1
+pylint==2.1.1
+pymongo==3.7.2
 python-dateutil==2.8.0
 pytz==2019.1
+PyYAML==3.13
+rsa==3.4.2
+s3transfer==0.2.0
 six==1.12.0
 SQLAlchemy==1.3.3
-typed-ast==1.3.5
+stevedore==1.30.1
 urllib3==1.25.2
+virtualenv==16.0.0
+virtualenv-clone==0.5.3
+virtualenvwrapper==4.8.4
 visitor==0.1.3
 Werkzeug==0.15.4
-wrapt==1.11.1
+wrapt==1.10.11
 WTForms==2.2.1
 xlrd==1.2.0
